# Prediction-Market

./: .env.example  .gitignore  CONTRACT_DEPLOYMENT_STATUS.md  DEPLOYMENT.md  DEPLOYMENT_ANALYSIS.md  DEPLOYMENT_DETAILS_COMPLETE.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.md  DEPLOY_TO_LINERA.md  PRODUCTION_DEPLOYMENT_COMPLETE.md  PRODUCTION_DEPLOYMENT_STATUS.md  README.md  package-lock.json  start_production.bat
ai-engine/: main.py  requirements.txt  train.py
backend/: package-lock.json  package.json
backend-api/: Dockerfile  jest.config.ts  package-lock.json  package.json  tsconfig.json
backend-api/src/: auth.ts  db.ts  linera.ts  server.ts
backend-api/test/: api.spec.ts
backend/src/: server.js
contracts/: Cargo.toml
contracts/src/: lib.rs  market_contract.rs  market_factory.rs  types.rs
docs/: acceptance.md  linera-integration.md  security-checklist.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
game-service/: Dockerfile  package.json
game-service/src/: server.ts
games/aviator/: README.md  index.html
games/mines/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
infra/: docker-compose.yml  init.sql  nginx.conf
linera-watcher/: Dockerfile  README.md  package.json  watcher.js
pln/: README.md
pln/frontend/: index.html  package.json
pln/infra/: docker-compose.yml
scripts/: deploy.sh  install_deps.sh  run_local.bat  run_local.sh
tools/: verify_round.js
wallet-service/: Dockerfile  package.json  tsconfig.json
(+40 files in other folders)
