[package]
name = "flashbet-contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
linera-sdk = { git = "https://github.com/linera-io/linera-protocol.git" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
async-trait = "0.1"

[[bin]]
name = "market-factory"
path = "src/market_factory.rs"

[[bin]]
name = "market-contract"
path = "src/market_contract.rs"